k8s/happybus-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: happybus-deployment
  namespace: submodule-template    
  labels:
    app: happybus
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: happybus
  template:
    metadata: 
      labels:
        app: happybus
    spec:
      containers:
      - name: happybus
        image: mgmtsv-registry.cloudzcp.io/template/happybus_img:1
        ports: 
        - containerPort: 80
        imagePullPolicy: Always
