k8s/happybus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: happybus-service
  namespace: submodule-template    
spec:
  ports:
  - name: "http"
    port: 80
    targetPort: 80
  selector:
    app: happybus
  type: NodePort
